--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Fancy schmancy math</title>
-  <link rel="icon" type="image/x-icon" href="http://cdn.onlinewebfonts.com/svg/img_433031.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
